--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "images"]
-	path = images
-	url = git://github.com/gotgit/gotgithub-images.git
+[submodule "graphics"]
+	path = graphics
+	url = git://github.com/gotgit/gotgithub-graphics.git
