Set table style and change appendix file name.

--- a/_version.inc.in
+++ b/_version.inc.in
@@ -1,2 +1,3 @@
-:Version: <version>
 :Author: Jiang Xin
+:Version: <version>
+:Copyright: `Creative Commons BY-NC-SA <http://creativecommons.org/licenses/by-nc-sa/3.0/>`_
